Update .config/kitty/kitty.conf Update .config/kitty/kitty.conf.bak Add .config/kitty/paste-actions.py Add .config/kitty/startup.conf

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -22,7 +22,7 @@
 
 # font_size 11.0
 
-font_size 12.5
+font_size 12
 
 #: Font size (in pts).
 
@@ -507,7 +507,7 @@ font_size 12.5
 #: programs, including websites open in your browser can read the
 #: contents of the system clipboard.
 
-# paste_actions quote-urls-at-prompt,confirm
+paste_actions quote-urls-at-prompt,confirm,filter
 
 #: A comma separated list of actions to take when pasting text into
 #: the terminal. The supported paste actions are:
@@ -533,7 +533,7 @@ font_size 12.5
 #: no-op:
 #:     Has no effect.
 
-# strip_trailing_spaces never
+strip_trailing_spaces smart
 
 #: Remove spaces at the end of lines when copying to clipboard. A
 #: value of smart will do it when using normal selections, but not
@@ -866,7 +866,7 @@ remember_window_size  yes
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts *
+enabled_layouts tall,grid,fat
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -1617,7 +1617,7 @@ editor /var/home/linuxbrew/.linuxbrew/bin/nvim
 #: builds do not do update checking. Changing this option by reloading
 #: the config is not supported.
 
-# startup_session none
+startup_session ~/.config/kitty/startup.conf
 
 #: Path to a session file to use for all kitty instances. Can be
 #: overridden by using the kitty --session =none command line option
@@ -2689,7 +2689,7 @@ include current-theme.conf
 # END_KITTY_THEME
 
 # BEGIN_KITTY_FONTS
-font_family      family="Fira Code"
+font_family      family="Hack Nerd Font"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
